tests/parser/statement_assign_err2.expected
Syntax Error: line 5:
Unexpected token (TOK_COLON, ':'), expected a token type of:  
  'TOK_ASSIGN' or
  'TOK_LPAREN'
