tests/parser/statement_assign_err2.mtp
begin
	(*Bad Assignment*)

	(*assignment statement: with factor (constant)*)
	something : 10;
end
.